nvml-wrapper-sys/nvml.h

    typedef struct nvmlDevice_st *nvmlDevice_t;
    typedef struct nvmlEccErrorCounts_st
    {
        unsigned long long l1Cache;      
        unsigned long long l2Cache;      
        unsigned long long deviceMemory; 
        unsigned long long registerFile; 
    } nvmlEccErrorCounts_t;
    typedef struct nvmlUtilization_st
    {
        unsigned int gpu;    
        unsigned int memory; 
    } nvmlUtilization_t;
    typedef struct nvmlMemory_st
    {
        unsigned long long total; 
        unsigned long long free;  
        unsigned long long used;  
    } nvmlMemory_t;
    typedef struct nvmlProcessInfo_st
    {
        unsigned int pid;                 
        unsigned long long usedGpuMemory; 
    } nvmlProcessInfo_t;
    typedef struct nvmlBridgeChipInfo_st
    {
        nvmlBridgeChipType_t type; 
        unsigned int fwVersion;    
    } nvmlBridgeChipInfo_t;
    typedef struct nvmlBridgeChipHierarchy_st
    {
        unsigned char bridgeCount;                                     
        nvmlBridgeChipInfo_t bridgeChipInfo[NVML_MAX_PHYSICAL_BRIDGE]; 
    } nvmlBridgeChipHierarchy_t;
    typedef enum nvmlEnableState_enum
    {
        NVML_FEATURE_DISABLED = 0, 
        NVML_FEATURE_ENABLED = 1   
    } nvmlEnableState_t;
    typedef enum nvmlTemperatureThresholds_enum
    {
        NVML_TEMPERATURE_THRESHOLD_SHUTDOWN = 0, 
        NVML_TEMPERATURE_THRESHOLD_SLOWDOWN = 1, 
        NVML_TEMPERATURE_THRESHOLD_MEM_MAX = 2,  
        NVML_TEMPERATURE_THRESHOLD_GPU_MAX = 3,  
        NVML_TEMPERATURE_THRESHOLD_COUNT
    } nvmlTemperatureThresholds_t;
    typedef enum nvmlTemperatureSensors_enum
    {
        NVML_TEMPERATURE_GPU = 0, 
        NVML_TEMPERATURE_COUNT
    } nvmlTemperatureSensors_t;
    typedef enum nvmlComputeMode_enum
    {
        NVML_COMPUTEMODE_DEFAULT = 0,           
        NVML_COMPUTEMODE_EXCLUSIVE_THREAD = 1,  
        NVML_COMPUTEMODE_PROHIBITED = 2,        
        NVML_COMPUTEMODE_EXCLUSIVE_PROCESS = 3, 
        NVML_COMPUTEMODE_COUNT
    } nvmlComputeMode_t;
    typedef enum nvmlMemoryErrorType_enum
    {
        NVML_MEMORY_ERROR_TYPE_CORRECTED = 0,
        NVML_MEMORY_ERROR_TYPE_UNCORRECTED = 1,
        NVML_MEMORY_ERROR_TYPE_COUNT 
    } nvmlMemoryErrorType_t;
    typedef enum nvmlEccCounterType_enum
    {
        NVML_VOLATILE_ECC = 0,  
        NVML_AGGREGATE_ECC = 1, 
        NVML_ECC_COUNTER_TYPE_COUNT 
    } nvmlEccCounterType_t;
    typedef enum nvmlClockType_enum
    {
        NVML_CLOCK_GRAPHICS = 0, 
        NVML_CLOCK_SM = 1,       
        NVML_CLOCK_MEM = 2,      
        NVML_CLOCK_VIDEO = 3,    
        NVML_CLOCK_COUNT 
    } nvmlClockType_t;
    typedef enum nvmlClockId_enum
    {
        NVML_CLOCK_ID_CURRENT = 0,            
        NVML_CLOCK_ID_APP_CLOCK_TARGET = 1,   
        NVML_CLOCK_ID_APP_CLOCK_DEFAULT = 2,  
        NVML_CLOCK_ID_CUSTOMER_BOOST_MAX = 3, 
        NVML_CLOCK_ID_COUNT 
    } nvmlClockId_t;
    typedef enum nvmlDriverModel_enum
    {
        NVML_DRIVER_WDDM = 0, 
        NVML_DRIVER_WDM = 1   
    } nvmlDriverModel_t;
    typedef enum nvmlPStates_enum
    {
        NVML_PSTATE_0 = 0,       
        NVML_PSTATE_1 = 1,       
        NVML_PSTATE_2 = 2,       
        NVML_PSTATE_3 = 3,       
        NVML_PSTATE_4 = 4,       
        NVML_PSTATE_5 = 5,       
        NVML_PSTATE_6 = 6,       
        NVML_PSTATE_7 = 7,       
        NVML_PSTATE_8 = 8,       
        NVML_PSTATE_9 = 9,       
        NVML_PSTATE_10 = 10,     
        NVML_PSTATE_11 = 11,     
        NVML_PSTATE_12 = 12,     
        NVML_PSTATE_13 = 13,     
        NVML_PSTATE_14 = 14,     
        NVML_PSTATE_15 = 15,     
        NVML_PSTATE_UNKNOWN = 32 
    } nvmlPstates_t;
    typedef enum nvmlGom_enum
    {
        NVML_GOM_ALL_ON = 0, 
        NVML_GOM_COMPUTE = 1, 
        NVML_GOM_LOW_DP = 2 
    } nvmlGpuOperationMode_t;
    typedef enum nvmlReturn_enum
    {
        NVML_SUCCESS = 0,                        
        NVML_ERROR_UNINITIALIZED = 1,            
        NVML_ERROR_INVALID_ARGUMENT = 2,         
        NVML_ERROR_NOT_SUPPORTED = 3,            
        NVML_ERROR_NO_PERMISSION = 4,            
        NVML_ERROR_ALREADY_INITIALIZED = 5,      
        NVML_ERROR_NOT_FOUND = 6,                
        NVML_ERROR_INSUFFICIENT_SIZE = 7,        
        NVML_ERROR_INSUFFICIENT_POWER = 8,       
        NVML_ERROR_DRIVER_NOT_LOADED = 9,        
        NVML_ERROR_TIMEOUT = 10,                 
        NVML_ERROR_IRQ_ISSUE = 11,               
        NVML_ERROR_LIBRARY_NOT_FOUND = 12,       
        NVML_ERROR_FUNCTION_NOT_FOUND = 13,      
        NVML_ERROR_CORRUPTED_INFOROM = 14,       
        NVML_ERROR_GPU_IS_LOST = 15,             
        NVML_ERROR_RESET_REQUIRED = 16,          
        NVML_ERROR_OPERATING_SYSTEM = 17,        
        NVML_ERROR_LIB_RM_VERSION_MISMATCH = 18, 
        NVML_ERROR_IN_USE = 19,                  
        NVML_ERROR_MEMORY = 20,                  
        NVML_ERROR_NO_DATA = 21,                 
        NVML_ERROR_VGPU_ECC_NOT_SUPPORTED = 22,  
        NVML_ERROR_INSUFFICIENT_RESOURCES = 23,  
        NVML_ERROR_UNKNOWN = 999                 
    } nvmlReturn_t;
    typedef enum nvmlMemoryLocation_enum
    {
        NVML_MEMORY_LOCATION_L1_CACHE = 0,       
        NVML_MEMORY_LOCATION_L2_CACHE = 1,       
        NVML_MEMORY_LOCATION_DRAM = 2,           
        NVML_MEMORY_LOCATION_DEVICE_MEMORY = 2,  
        NVML_MEMORY_LOCATION_REGISTER_FILE = 3,  
        NVML_MEMORY_LOCATION_TEXTURE_MEMORY = 4, 
        NVML_MEMORY_LOCATION_TEXTURE_SHM = 5,    
        NVML_MEMORY_LOCATION_CBU = 6,            
        NVML_MEMORY_LOCATION_SRAM = 7,           
        NVML_MEMORY_LOCATION_COUNT 
    } nvmlMemoryLocation_t;
    typedef enum nvmlRestrictedAPI_enum
    {
        NVML_RESTRICTED_API_SET_APPLICATION_CLOCKS = 0,  
        NVML_RESTRICTED_API_SET_AUTO_BOOSTED_CLOCKS = 1, 
        NVML_RESTRICTED_API_COUNT
    } nvmlRestrictedAPI_t;
    nvmlReturn_t DECLDIR nvmlDeviceGetClockInfo(nvmlDevice_t device, nvmlClockType_t type, unsigned int *clock);
    nvmlReturn_t DECLDIR nvmlDeviceGetMaxClockInfo(nvmlDevice_t device, nvmlClockType_t type, unsigned int *clock);
    nvmlReturn_t DECLDIR nvmlDeviceGetApplicationsClock(nvmlDevice_t device, nvmlClockType_t clockType, unsigned int *clockMHz);
    nvmlReturn_t DECLDIR nvmlDeviceGetDefaultApplicationsClock(nvmlDevice_t device, nvmlClockType_t clockType, unsigned int *clockMHz);
    nvmlReturn_t DECLDIR nvmlDeviceResetApplicationsClocks(nvmlDevice_t device);
    nvmlReturn_t DECLDIR nvmlDeviceGetClock(nvmlDevice_t device, nvmlClockType_t clockType, nvmlClockId_t clockId, unsigned int *clockMHz);
    nvmlReturn_t DECLDIR nvmlDeviceGetMaxCustomerBoostClock(nvmlDevice_t device, nvmlClockType_t clockType, unsigned int *clockMHz);
    nvmlReturn_t DECLDIR nvmlDeviceGetSupportedMemoryClocks(nvmlDevice_t device, unsigned int *count, unsigned int *clocksMHz);
    nvmlReturn_t DECLDIR nvmlDeviceGetSupportedGraphicsClocks(nvmlDevice_t device, unsigned int memoryClockMHz, unsigned int *count, unsigned int *clocksMHz);
    nvmlReturn_t DECLDIR nvmlDeviceGetAutoBoostedClocksEnabled(nvmlDevice_t device, nvmlEnableState_t *isEnabled, nvmlEnableState_t *defaultIsEnabled);
    nvmlReturn_t DECLDIR nvmlDeviceSetAutoBoostedClocksEnabled(nvmlDevice_t device, nvmlEnableState_t enabled);
    nvmlReturn_t DECLDIR nvmlDeviceSetDefaultAutoBoostedClocksEnabled(nvmlDevice_t device, nvmlEnableState_t enabled, unsigned int flags);
    nvmlReturn_t DECLDIR nvmlDeviceGetFanSpeed(nvmlDevice_t device, unsigned int *speed);
    nvmlReturn_t DECLDIR nvmlDeviceGetTemperature(nvmlDevice_t device, nvmlTemperatureSensors_t sensorType, unsigned int *temp);
    nvmlReturn_t DECLDIR nvmlDeviceGetTemperatureThreshold(nvmlDevice_t device, nvmlTemperatureThresholds_t thresholdType, unsigned int *temp);
    nvmlReturn_t DECLDIR nvmlDeviceGetPerformanceState(nvmlDevice_t device, nvmlPstates_t *pState);
    nvmlReturn_t DECLDIR nvmlDeviceGetCurrentClocksThrottleReasons(nvmlDevice_t device, unsigned long long *clocksThrottleReasons);
    nvmlReturn_t DECLDIR nvmlDeviceGetSupportedClocksThrottleReasons(nvmlDevice_t device, unsigned long long *supportedClocksThrottleReasons);
    nvmlReturn_t DECLDIR nvmlDeviceGetPowerState(nvmlDevice_t device, nvmlPstates_t *pState);
    nvmlReturn_t DECLDIR nvmlDeviceGetPowerManagementMode(nvmlDevice_t device, nvmlEnableState_t *mode);
    nvmlReturn_t DECLDIR nvmlDeviceGetPowerManagementLimit(nvmlDevice_t device, unsigned int *limit);
    nvmlReturn_t DECLDIR nvmlDeviceGetPowerManagementLimitConstraints(nvmlDevice_t device, unsigned int *minLimit, unsigned int *maxLimit);
    nvmlReturn_t DECLDIR nvmlDeviceGetPowerManagementDefaultLimit(nvmlDevice_t device, unsigned int *defaultLimit);
    nvmlReturn_t DECLDIR nvmlDeviceGetPowerUsage(nvmlDevice_t device, unsigned int *power);
    nvmlReturn_t DECLDIR nvmlDeviceGetEnforcedPowerLimit(nvmlDevice_t device, unsigned int *limit);
    nvmlReturn_t DECLDIR nvmlDeviceGetGpuOperationMode(nvmlDevice_t device, nvmlGpuOperationMode_t *current, nvmlGpuOperationMode_t *pending);
    nvmlReturn_t DECLDIR nvmlDeviceGetMemoryInfo(nvmlDevice_t device, nvmlMemory_t *memory);
    nvmlReturn_t DECLDIR nvmlDeviceGetComputeMode(nvmlDevice_t device, nvmlComputeMode_t *mode);
    nvmlReturn_t DECLDIR nvmlDeviceGetEccMode(nvmlDevice_t device, nvmlEnableState_t *current, nvmlEnableState_t *pending);
    nvmlReturn_t DECLDIR nvmlDeviceGetBoardId(nvmlDevice_t device, unsigned int *boardId);
    nvmlReturn_t DECLDIR nvmlDeviceGetMultiGpuBoard(nvmlDevice_t device, unsigned int *multiGpuBool);
    nvmlReturn_t DECLDIR nvmlDeviceGetTotalEccErrors(nvmlDevice_t device, nvmlMemoryErrorType_t errorType, nvmlEccCounterType_t counterType, unsigned long long *eccCounts);
    nvmlReturn_t DECLDIR nvmlDeviceGetDetailedEccErrors(nvmlDevice_t device, nvmlMemoryErrorType_t errorType, nvmlEccCounterType_t counterType, nvmlEccErrorCounts_t *eccCounts);
    nvmlReturn_t DECLDIR nvmlDeviceGetMemoryErrorCounter(nvmlDevice_t device, nvmlMemoryErrorType_t errorType,
                                                         nvmlEccCounterType_t counterType,
                                                         nvmlMemoryLocation_t locationType, unsigned long long *count);
    nvmlReturn_t DECLDIR nvmlDeviceGetUtilizationRates(nvmlDevice_t device, nvmlUtilization_t *utilization);
    nvmlReturn_t DECLDIR nvmlDeviceGetEncoderUtilization(nvmlDevice_t device, unsigned int *utilization, unsigned int *samplingPeriodUs);
    nvmlReturn_t DECLDIR nvmlDeviceGetDecoderUtilization(nvmlDevice_t device, unsigned int *utilization, unsigned int *samplingPeriodUs);
    nvmlReturn_t DECLDIR nvmlDeviceGetDriverModel(nvmlDevice_t device, nvmlDriverModel_t *current, nvmlDriverModel_t *pending);
    nvmlReturn_t DECLDIR nvmlDeviceGetVbiosVersion(nvmlDevice_t device, char *version, unsigned int length);
    nvmlReturn_t DECLDIR nvmlDeviceGetBridgeChipInfo(nvmlDevice_t device, nvmlBridgeChipHierarchy_t *bridgeHierarchy);
    nvmlReturn_t DECLDIR nvmlDeviceGetComputeRunningProcesses(nvmlDevice_t device, unsigned int *infoCount, nvmlProcessInfo_t *infos);
    nvmlReturn_t DECLDIR nvmlDeviceGetGraphicsRunningProcesses(nvmlDevice_t device, unsigned int *infoCount, nvmlProcessInfo_t *infos);
    nvmlReturn_t DECLDIR nvmlDeviceOnSameBoard(nvmlDevice_t device1, nvmlDevice_t device2, int *onSameBoard);
    nvmlReturn_t DECLDIR nvmlDeviceGetAPIRestriction(nvmlDevice_t device, nvmlRestrictedAPI_t apiType, nvmlEnableState_t *isRestricted);