nvml-wrapper-sys/src/bindings/linux.rs

extern "C" {
    pub fn nvmlDeviceGetClockInfo(device: nvmlDevice_t,
                                  type_: nvmlClockType_t,
                                  clock: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMaxClockInfo(device: nvmlDevice_t,
                                     type_: nvmlClockType_t,
                                     clock: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetApplicationsClock(device: nvmlDevice_t,
                                          clockType: nvmlClockType_t,
                                          clockMHz:
                                              *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetDefaultApplicationsClock(device: nvmlDevice_t,
                                                 clockType: nvmlClockType_t,
                                                 clockMHz:
                                                     *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceResetApplicationsClocks(device: nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetClock(device: nvmlDevice_t,
                              clockType: nvmlClockType_t,
                              clockId: nvmlClockId_t,
                              clockMHz: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMaxCustomerBoostClock(device: nvmlDevice_t,
                                              clockType: nvmlClockType_t,
                                              clockMHz:
                                                  *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetSupportedMemoryClocks(device: nvmlDevice_t,
                                              count:
                                                  *mut ::std::os::raw::c_uint,
                                              clocksMHz:
                                                  *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetSupportedGraphicsClocks(device: nvmlDevice_t,
                                                memoryClockMHz:
                                                    ::std::os::raw::c_uint,
                                                count:
                                                    *mut ::std::os::raw::c_uint,
                                                clocksMHz:
                                                    *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetAutoBoostedClocksEnabled(device: nvmlDevice_t,
                                                 isEnabled:
                                                     *mut nvmlEnableState_t,
                                                 defaultIsEnabled:
                                                     *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetAutoBoostedClocksEnabled(device: nvmlDevice_t,
                                                 enabled: nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetDefaultAutoBoostedClocksEnabled(device: nvmlDevice_t,
                                                        enabled:
                                                            nvmlEnableState_t,
                                                        flags:
                                                            ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetFanSpeed(device: nvmlDevice_t,
                                 speed: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetTemperature(device: nvmlDevice_t,
                                    sensorType: nvmlTemperatureSensors_t,
                                    temp: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetTemperatureThreshold(device: nvmlDevice_t,
                                             thresholdType:
                                                 nvmlTemperatureThresholds_t,
                                             temp:
                                                 *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPerformanceState(device: nvmlDevice_t,
                                         pState: *mut nvmlPstates_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetCurrentClocksThrottleReasons(device: nvmlDevice_t,
                                                     clocksThrottleReasons:
                                                         *mut ::std::os::raw::c_ulonglong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetSupportedClocksThrottleReasons(device: nvmlDevice_t,
                                                       supportedClocksThrottleReasons:
                                                           *mut ::std::os::raw::c_ulonglong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPowerState(device: nvmlDevice_t,
                                   pState: *mut nvmlPstates_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPowerManagementMode(device: nvmlDevice_t,
                                            mode: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPowerManagementLimit(device: nvmlDevice_t,
                                             limit:
                                                 *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPowerManagementLimitConstraints(device: nvmlDevice_t,
                                                        minLimit:
                                                            *mut ::std::os::raw::c_uint,
                                                        maxLimit:
                                                            *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPowerManagementDefaultLimit(device: nvmlDevice_t,
                                                    defaultLimit:
                                                        *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPowerUsage(device: nvmlDevice_t,
                                   power: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetEnforcedPowerLimit(device: nvmlDevice_t,
                                           limit: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetGpuOperationMode(device: nvmlDevice_t,
                                         current: *mut nvmlGpuOperationMode_t,
                                         pending: *mut nvmlGpuOperationMode_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMemoryInfo(device: nvmlDevice_t,
                                   memory: *mut nvmlMemory_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetComputeMode(device: nvmlDevice_t,
                                    mode: *mut nvmlComputeMode_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetEccMode(device: nvmlDevice_t,
                                current: *mut nvmlEnableState_t,
                                pending: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetBoardId(device: nvmlDevice_t,
                                boardId: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMultiGpuBoard(device: nvmlDevice_t,
                                      multiGpuBool:
                                          *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetTotalEccErrors(device: nvmlDevice_t,
                                       errorType: nvmlMemoryErrorType_t,
                                       counterType: nvmlEccCounterType_t,
                                       eccCounts:
                                           *mut ::std::os::raw::c_ulonglong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetDetailedEccErrors(device: nvmlDevice_t,
                                          errorType: nvmlMemoryErrorType_t,
                                          counterType: nvmlEccCounterType_t,
                                          eccCounts:
                                              *mut nvmlEccErrorCounts_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMemoryErrorCounter(device: nvmlDevice_t,
                                           errorType: nvmlMemoryErrorType_t,
                                           counterType: nvmlEccCounterType_t,
                                           locationType: nvmlMemoryLocation_t,
                                           count:
                                               *mut ::std::os::raw::c_ulonglong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetUtilizationRates(device: nvmlDevice_t,
                                         utilization: *mut nvmlUtilization_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetEncoderUtilization(device: nvmlDevice_t,
                                           utilization:
                                               *mut ::std::os::raw::c_uint,
                                           samplingPeriodUs:
                                               *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetDecoderUtilization(device: nvmlDevice_t,
                                           utilization:
                                               *mut ::std::os::raw::c_uint,
                                           samplingPeriodUs:
                                               *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetDriverModel(device: nvmlDevice_t,
                                    current: *mut nvmlDriverModel_t,
                                    pending: *mut nvmlDriverModel_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetVbiosVersion(device: nvmlDevice_t,
                                     version: *mut ::std::os::raw::c_char,
                                     length: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetBridgeChipInfo(device: nvmlDevice_t,
                                       bridgeHierarchy:
                                           *mut nvmlBridgeChipHierarchy_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetComputeRunningProcesses(device: nvmlDevice_t,
                                                infoCount:
                                                    *mut ::std::os::raw::c_uint,
                                                infos: *mut nvmlProcessInfo_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetGraphicsRunningProcesses(device: nvmlDevice_t,
                                                 infoCount:
                                                     *mut ::std::os::raw::c_uint,
                                                 infos:
                                                     *mut nvmlProcessInfo_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceOnSameBoard(device1: nvmlDevice_t, device2: nvmlDevice_t,
                                 onSameBoard: *mut ::std::os::raw::c_int)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetAPIRestriction(device: nvmlDevice_t,
                                       apiType: nvmlRestrictedAPI_t,
                                       isRestricted: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
